@@ -14,5 +14,5 @@
 #	osh-YYYYMMDD           == official release
 #	osh-YYYYMMDD-p[1-9]    == patched  release
 #
-OSH_DATE=	June 4, 2012
+OSH_DATE=	June 12, 2012
 OSH_VERSION=	osh-current
