@@ -612,16 +612,8 @@ The value of the environment variable HOME.
 \fB$\fR\fIm\fR
 The value of the environment variable MANPATH.
 .TP
-\fB$\fR\fIn\fR (*)
-A synonym for the \fB$\fR\fI#\fR parameter;
-\fB$\fR\fIn\fR is deprecated.
-.TP
 \fB$\fR\fIp\fR
 The value of the environment variable PATH.
-.TP
-\fB$\fR\fIs\fR (*)
-A synonym for the \fB$\fR\fI?\fR parameter;
-\fB$\fR\fIs\fR is deprecated.
 .TP
 \fB$\fR\fIt\fR
 The terminal name with which the standard input
@@ -705,7 +697,7 @@ A variable consists of a name,
 a single ASCII character,
 which matches
 either the [A-Z] range
-or the [a-cfgi-loq-rw-z] range,
+or the [a-cfgi-lnoq-sw-z] range,
 inclusive.
 A variable must also contain a value set by the user.
 .PP
